<resources>
    <string name="app_name">Xati.</string>
    <string name="xati_logo">Xati logo</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="next">Next</string>
    <string name="back_button">Back button</string>
    <string name="forgot_password_underline"><u>Forgot password?</u></string>
    <string name="sign_in">Sign in</string>
    <string name="profile_photo">Profile photo</string>
    <string name="save">Save</string>
    <string name="use_camera">Use camera</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="recover_password">Recover password</string>
    <string name="registration_successful">Registration successful</string>
    <string name="ok">Ok</string>
    <string name="check_icon">Check icon</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="find_users">Find users</string>
    <string name="arrow_right">Arrow right</string>
    <string name="find_users_here">Find users here</string>
    <string name="no_chat_found">No chat found</string>
    <string name="example_of_last_message">Example of last message</string>
    <string name="chevron_right">Chevron right</string>
    <string name="search_user">Search user</string>
    <string name="enter_your_friends_code">Enter your friend\'s code</string>
    <string name="search_button">Search button</string>
    <string name="user_not_found">User not found</string>
    <string name="sad_emoji">Sad Emoji</string>
    <string name="example_code">123456789123</string>
    <string name="message">Message</string>
    <string name="request_id_token_google_sign_in">771501110601-bpfsrqfrbf8f0lnlvetg0hctdbhqkqhq.apps.googleusercontent.com</string>
    <string name="message_example">Message example</string>
</resources>