<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <FrameLayout
        android:id="@+id/frameLayoutHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/profile_photo"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/profile_photo" />

    <TextView
        android:id="@+id/textNoChatFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_chat_found"
        android:textColor="?attr/textDescription"
        android:textSize="24sp"
        android:fontFamily="@font/interbold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textFindUsersHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_users_here"
        android:textColor="?attr/textDescription"
        android:textSize="20sp"
        android:fontFamily="@font/interbold"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right_arrow"
        android:layout_marginTop="4dp"
        android:layout_marginStart="64dp"
        app:layout_constraintStart_toStartOf="@+id/textFindUsersHere"
        app:layout_constraintEnd_toEndOf="@+id/textFindUsersHere"
        app:layout_constraintTop_toBottomOf="@+id/textFindUsersHere"
        android:contentDescription="@string/arrow_right" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="28dp"
        app:borderWidth="0dp"
        android:elevation="8dp"
        android:backgroundTint="@color/blue_500"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_floating_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/find_users" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerChats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>