<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/loginBackground"
    tools:context=".ui.activity.SearchUserActivity">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_back"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_user"
        android:textColor="?attr/textDescription"
        android:textSize="18sp"
        android:fontFamily="@font/interbold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBack"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/gray_200"
        app:boxBackgroundColor="?attr/inputTextBackground"
        android:layout_marginTop="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="84dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputUserCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_friends_code"
            android:textColorHint="@color/blue_700"
            android:inputType="number"
            android:textColor="@color/blue_700"
            android:textSize="16sp"
            android:fontFamily="@font/intermedium"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSearch"
        android:layout_width="54dp"
        android:layout_height="54dp"
        app:icon="@drawable/ic_search"
        app:iconTint="@color/white"
        app:iconPadding="0dp"
        android:background="@drawable/circle_style"
        android:elevation="8dp"
        app:layout_constraintStart_toEndOf="@+id/textFieldMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textFieldMessage"
        app:layout_constraintBottom_toBottomOf="@+id/textFieldMessage"
        android:contentDescription="@string/search_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUserFound"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldMessage" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImageProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/profile_photo"
                android:background="@drawable/image_circle"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_photo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="?attr/textDescription"
            android:textSize="16sp"
            android:fontFamily="@font/intersemibold"
            android:layout_marginTop="2dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardImageProfile"
            app:layout_constraintBottom_toBottomOf="@+id/cardImageProfile"/>

        <ImageView
            android:id="@+id/imageChevronRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardImageProfile"
            app:layout_constraintBottom_toBottomOf="@+id/cardImageProfile"
            android:contentDescription="@string/chevron_right"
            app:tint="?attr/textDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textUserNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_not_found"
        android:textColor="?attr/textDescription"
        android:textSize="24sp"
        android:fontFamily="@font/interbold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imageUserNotFound"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:src="@drawable/ic_sad_emoji"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUserNotFound"
        android:contentDescription="@string/sad_emoji" />

</androidx.constraintlayout.widget.ConstraintLayout>