<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/loginBackground"
    tools:context=".ForgotPasswordFragment">

    <ImageButton
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_back"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:contentDescription="@string/xati_logo"
        android:src="@drawable/xati_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password"
        android:textColor="?attr/textDescription"
        android:textSize="18sp"
        android:fontFamily="@font/intersemibold"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/gray_200"
        app:boxBackgroundColor="?attr/inputTextBackground"
        android:layout_marginTop="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:textColorHint="@color/blue_700"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue_700"
            android:textSize="16sp"
            android:fontFamily="@font/intermedium"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="?attr/buttonBackground"
        app:cornerRadius="12dp"
        android:elevation="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/recover_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/intermedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>