<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/loginBackground"
    tools:context=".ui.activity.ProfileActivity">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_back"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="?attr/textDescription"
        android:textSize="18sp"
        android:fontFamily="@font/interbold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBack"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImageProfile"
        android:layout_width="190dp"
        android:layout_height="190dp"
        app:cardCornerRadius="95dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" >

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:contentDescription="@string/profile_photo"
            android:background="@drawable/image_circle"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_photo" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditPhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:icon="@drawable/ic_edit"
        app:iconTint="@color/white"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/cardImageProfile"
        app:layout_constraintBottom_toBottomOf="@+id/cardImageProfile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/gray_200"
        app:boxBackgroundColor="?attr/inputTextBackground"
        android:layout_marginTop="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cardImageProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/blue_700"
            android:inputType="textPersonName"
            android:textColor="@color/blue_700"
            android:textSize="16sp"
            android:fontFamily="@font/intermedium"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="?attr/buttonBackground"
        app:cornerRadius="12dp"
        android:elevation="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/intermedium"
        app:layout_constraintTop_toBottomOf="@+id/textFieldName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/gray_200"
        app:boxBackgroundColor="?attr/inputTextBackground"
        android:layout_marginTop="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputUserCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/example_code"
            android:textColorHint="@color/blue_700"
            android:drawableEnd="@drawable/ic_content_copy"
            android:textColor="@color/blue_700"
            android:textSize="16sp"
            android:fontFamily="@font/intermedium"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/red_500"
        app:cornerRadius="12dp"
        android:elevation="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/intermedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>