<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/loginBackground"
    tools:context=".ui.fragment.UploadProfilePhotoFragment">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_back"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_photo"
        android:textColor="?attr/textDescription"
        android:textSize="18sp"
        android:fontFamily="@font/interbold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBack"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack" />

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/profile_photo"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        android:contentDescription="@string/profile_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditPhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:icon="@drawable/ic_edit"
        app:iconTint="@color/white"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:cornerRadius="25dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageProfile"
        app:layout_constraintBottom_toBottomOf="@+id/imageProfile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="?attr/buttonBackground"
        app:cornerRadius="12dp"
        android:elevation="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/intermedium"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>